Installation de WebpackEncore,Bootstrap et Fontawesome

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=D:\900 icons HD for Windows 7\ecomm1.ico,0
+IconResource=D:\900 icons HD for Windows 7\cart.ico,0
 [ViewState]
 Mode=
 Vid=
